# sevenzip-mt

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs
src/archive/: builder.rs  header.rs  mod.rs  writer.rs
src/compression/: block.rs  lzma2.rs  mod.rs
src/io/: mod.rs  seek.rs  writer.rs
src/threading/: scheduler.rs  worker.rs
tests/: integration.rs
