[package]
name = "sevenzip-mt"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust multi-threaded 7z archive creator with LZMA2 compression"

[[bin]]
name = "sevenzip-mt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
lzma-rust2 = "0.15"
rayon = "1.10"
thiserror = "2"
crc32fast = "1.4"
byteorder = "1.5"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
